# parallel-genetic-tsp

./: .gitignore  CMakeLists.txt  README.md  plots.ipynb  sequential.cpp  threads.cpp  utils.h
results/: best_fitnesses.csv  ff_results.csv  sequential_results.csv  threads_results.csv
src/: ff_implementation.cpp  ff_implementation.h  main.cpp  sequential.cpp  sequential.h  threads.cpp  threads.h  utils.cpp  utils.h  utimer.h
